--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"json-server --watch ./posts.json --post-3000 --host 0.0.0.0"
+    "start":"json-server --watch ./posts.json --port-3000 --host 0.0.0.0"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "json-server": "^0.16.3"
+    "json-server":  "^0.16.3"
   }
 }
